Set a fixed height for the logo's due to alignment issues

--- a/app/assets/stylesheets/partner.sass
+++ b/app/assets/stylesheets/partner.sass
@@ -4,6 +4,7 @@
 .partner_container
   float: left
   margin: 10px
+  height: 40px
 
 #header
   text-align: center
